--- a/EasyRefuel/template/app/src/main/res/layout/activity_maps.xml
+++ b/EasyRefuel/template/app/src/main/res/layout/activity_maps.xml
@@ -90,8 +90,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center_horizontal"
-                android:textSize="20sp"
-                android:padding="10dp"
+                android:textSize="15sp"
+                android:padding="5dp"
                 app:layout_anchor="@id/progress_bar"
                 app:layout_anchorGravity="center_horizontal" />
 
@@ -160,6 +160,30 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="Parti" />
+            <!-- filler -->
+            <TextView android:layout_height="0dip"
+                android:layout_width="fill_parent"
+                android:layout_weight="1" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right">
+                <Button
+                    android:id="@+id/Crediti"
+                    style="@android:style/Widget.Material.Light.Button.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Crediti"
+                    android:textSize="12sp" />
+                <Button
+                    android:id="@+id/Privacy"
+                    style="@android:style/Widget.Material.Light.Button.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Privacy"
+                    android:textSize="12sp" />
+            </LinearLayout>
 
         </LinearLayout>
     </android.support.design.widget.NavigationView>
