--- a/EasyRefuel/template/app/src/main/res/values/dimens.xml
+++ b/EasyRefuel/template/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
     <dimen name="linear_layout_margin_bottom">40dp</dimen>
     <dimen name="linear_layout_margin_left">10dp</dimen>
     <dimen name="button_margin">10dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
