--- a/EasyRefuel/template/app/src/main/res/layout/activity_maps.xml
+++ b/EasyRefuel/template/app/src/main/res/layout/activity_maps.xml
@@ -13,43 +13,54 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="it.unive.dais.cevid.datadroid.template.MapsActivity">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_gravity="end|top"
+            android:gravity="end"
+            android:layout_height="48dp"
+            android:layout_width="48dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp">
+            <ImageButton
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/button_maps"
+                android:background="@color/trans"
+                android:src="@drawable/button_maps"/>
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_gravity="end|bottom"
+            android:gravity="end"
+            android:layout_height="48dp"
+            android:layout_width="48dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginRight="10dp">
+            <ImageButton
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:id="@+id/button_nav"
+                android:background="@color/trans"
+                android:src="@drawable/button_nav"/>
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
-            android:weightSum="2"
-            android:layout_width="@dimen/linear_layout_width"
-            android:layout_height="@dimen/linear_layout_height"
             android:layout_gravity="start|bottom"
-            android:layout_marginBottom="@dimen/linear_layout_margin_bottom"
-            android:layout_marginLeft="@dimen/linear_layout_margin_left"
             android:gravity="start"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginBottom="40dp"
+            android:layout_marginLeft="@dimen/linear_layout_margin_left"
             >
-
-            <ImageButton
-                android:id="@+id/button_car"
-                android:scaleType="fitStart"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@color/trans"
-                android:src="@drawable/button_car"
-                android:visibility="invisible"
-                android:layout_weight="1"
-                android:layout_marginTop="@dimen/button_margin"/>
-
             <ImageButton
                 android:id="@+id/button_here"
-                android:scaleType="fitStart"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="48dp"
+                android:layout_height="48dp"
                 android:background="@color/trans"
                 android:src="@drawable/button_here"
-                android:visibility="visible"
-                android:layout_weight="1"
-                android:layout_marginTop="@dimen/button_margin"
                 />
         </LinearLayout>
-
-
     </fragment>
     <!-- The navigation drawer -->
     <android.support.design.widget.NavigationView
@@ -184,7 +195,6 @@
                     android:text="Privacy"
                     android:textSize="12sp" />
             </LinearLayout>
-
         </LinearLayout>
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
