--- a/EasyRefuel/template/app/src/debug/res/menu/maps_with_options.xml
+++ b/EasyRefuel/template/app/src/debug/res/menu/maps_with_options.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/MENU_SETTINGS"
+    <!--<item android:id="@+id/MENU_SETTINGS"
         android:title="@string/action_impostazioni" />
     <item android:id="@+id/MENU_INFO"
-        android:title="@string/action_info" />
+        android:title="@string/action_info" />-->
 
     <item android:id="@+id/action_search"
         android:icon="@android:drawable/ic_menu_search"
