--- a/EasyRefuel/template/app/src/main/res/layout/activity_search.xml
+++ b/EasyRefuel/template/app/src/main/res/layout/activity_search.xml
@@ -1,12 +1,11 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
+<TextView
         android:id="@+id/results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I risultati della ricerca saranno presentati qua"
         android:layout_centerInParent="true"/>
 
-</RelativeLayout>
+</LinearLayout>
