--- a/EasyRefuel/template/app/src/main/res/layout/popup_layout.xml
+++ b/EasyRefuel/template/app/src/main/res/layout/popup_layout.xml
@@ -35,6 +35,7 @@
                 android:layout_width="60dp"
                 android:layout_height="30dp"
                 android:text="Mappa"
+                android:textColor="@color/black"
                 android:textSize="16dp"/>
             <ImageButton
                 android:background="@drawable/circle"
@@ -55,6 +56,7 @@
             android:layout_width="70dp"
             android:layout_height="30dp"
             android:text="Satellite"
+            android:textColor="@color/black"
             android:textSize="16dp"/>
             <ImageButton
                 android:background="@drawable/circle"
@@ -75,6 +77,7 @@
             android:layout_width="45dp"
             android:layout_height="30dp"
             android:text="Ibrida"
+            android:textColor="@color/black"
             android:textSize="16dp"/>
         <ImageButton
             android:background="@drawable/circle"
@@ -95,6 +98,7 @@
             android:layout_width="50dp"
             android:layout_height="30dp"
             android:text="Rilievo"
+            android:textColor="@color/black"
             android:textSize="16dp"/>
         <ImageButton
             android:background="@drawable/circle"
