--- a/EasyRefuel/template/app/src/main/res/layout/activity_search.xml
+++ b/EasyRefuel/template/app/src/main/res/layout/activity_search.xml
@@ -1,11 +1,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView
+    <ListView android:id="@+id/listView"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+
+
+   <!-- <TextView
         android:id="@+id/results"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I risultati della ricerca saranno presentati qua"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"/>-->
+
+    </ListView>
 
 </LinearLayout>
